Fix:Overlapping Components #211

--- a/src/styles/flow_graph.module.css
+++ b/src/styles/flow_graph.module.css
@@ -2,11 +2,19 @@
 
 .flow_area {
   background-color: white;
+  
+
   text-shadow: -3px -3px 5px white, 3px -3px 5px white, -3px 3px 5px white, 3px 3px 5px white;
   border-radius: 8px;
   box-shadow: "0px 0px 10px #c6c6c6";
+  height: 100vh;
+    max-width: 100%;
 }
-
+@media (min-width: 768px){
+  .flow_area {
+    height:100% ;
+  }
+}
 .species {
   stroke:var(--ncar-color-primary-dark-blue);
   fill:var(--ncar-color-primary-dark-blue);
